# CG_Project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  screenshot_1782631539.ppm  screenshot_1782631546.ppm  screenshot_1782631556.ppm
examples/: 01_primitives.cpp  02_obj_loader.cpp  03_materials.cpp  04_transform.cpp  05_lighting.cpp  06_navigation.cpp  07_animation.cpp  08_nurbs.cpp  09_bone_test.cpp  09_humanoid_test.cpp  09_minimal.cpp  09_skeletal.cpp  10_portal.cpp
exeame/: main.cpp  shading_tutorial.cpp
media/: .gitignore
report/: experiment_report.fdb_latexmk  experiment_report.fls  experiment_report.tex
src/: main.cpp  render_flag.cpp  render_flag.h  star.cpp  star.h
src/animation/: animation_clip.cpp  animation_clip.h  animator.cpp  animator.h  humanoid.cpp  humanoid.h  skeleton.cpp  skeleton.h  skinned_mesh.cpp  skinned_mesh.h  skinned_shader.cpp  skinned_shader.h
src/base/: application.h  buffer.cpp  buffer.h  fullscreen_quad.cpp  fullscreen_quad.h  glsl_program.h  skybox.cpp  skybox.h  texture_cubemap.cpp  vertex_array.cpp  vertex_array.h
src/camera/: free_camera.h
src/collision/: aabb.h  gjk.h
src/game/: castle_defender.cpp  castle_defender.h  enemy.cpp  enemy.h  hud.cpp  hud.h  map.cpp  map.h  minecraft_game.cpp  minecraft_game.h  projectile.cpp  projectile.h  tower.cpp  tower.h  types.h  wave_manager.cpp  wave_manager.h
src/mesh/: mesh.cpp  mesh.h
src/nurbs/: nurbs.h
src/obj_loader/: obj_loader.cpp  obj_loader.h
src/orbit_control/: orbit_control.h
src/primitives/: primitives.cpp  primitives.h
src/render_util/: simple_lit.h  textured_lit.h
src/scene/: scene.cpp  scene.h
